feat: Completed authentication with JWTs. /signup endpoint implemented. Authentication middleware reading the value of and validating the token complete.
