# models/users.js
@@ -3,8 +3,19 @@ const { DataTypes } = require("sequelize")
 // Define and export the User model
 module.exports = (sequelize) => {
     const User = sequelize.define('User', {
-        username: DataTypes.STRING(50),
-        email: DataTypes.STRING(150),
+        username: {
+            type: DataTypes.STRING(50),
+            unique: true,
+            allowNull: false,
+        },
+        email: {
+            type: DataTypes.STRING(150),
+            unique: true,
+            allowNull: false,
+            validate: {
+                isEmail: true,
+            }
+        },
         password: DataTypes.STRING(150),
     },
     {
